--- a/src/footer.css
+++ b/src/footer.css
@@ -1,4 +1,8 @@
 .footer-container{
+    position: absolute;
+    bottom: 0;
+
+    width: 100vw;
     background-color: #3C3C3C;
     color: #c9c9c9;
 
@@ -8,7 +12,7 @@
     align-items: center;
     justify-content: center;
     gap: 5rem;
-    padding: 2rem;
+    padding: 2rem 0;
     margin-top: 3rem;
     font-family: "Poppins", sans-serif;
 }
