--- a/src/HangmanWord.css
+++ b/src/HangmanWord.css
@@ -5,6 +5,8 @@
 @media screen and (max-width:1200px) {
     div .word_container {
         gap: 6vw;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
         width: fit-content;
     }
 }
