--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -9,9 +9,14 @@ li, a, button{
 }
 
 header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     background-color: rgb(122, 122, 122);
     padding: 0 1rem;
@@ -21,8 +26,13 @@ header{
 .navbar_title{
     font-family: "Poppins", sans-serif;
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 1rem 0;
     gap: 0;
 }
@@ -51,6 +61,8 @@ body{
 
 
 .nav_links li a{
+    -webkit-transition:  all 0.3s ease 0s;
+    -o-transition:  all 0.3s ease 0s;
     transition:  all 0.3s ease 0s;
 }
 
